<?xml version="1.0" encoding="utf-8"?>

<com.otus.alexshr.userinfo.ValidatedFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/validatedForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InputFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/card_margin"
            app:contentPadding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.otus.alexshr.userinfo.ValidatedTextInputLayout
                    android:id="@+id/nameInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    app:helperText="@string/helper_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:regexp="@string/regexp_nonempty">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        tools:text="Alex" />
                </com.otus.alexshr.userinfo.ValidatedTextInputLayout>

                <com.otus.alexshr.userinfo.ValidatedTextInputLayout
                    android:id="@+id/emailInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input_margin_top"
                    android:hint="@string/hint_email"
                    app:helperText="@string/helper_email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:text="a@b.ru" />
                </com.otus.alexshr.userinfo.ValidatedTextInputLayout>

                <com.otus.alexshr.userinfo.ValidatedTextInputLayout
                    android:id="@+id/phoneInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_input_margin_top"
                    android:hint="@string/hint_phone"
                    app:helperText="@string/helper_phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailInput">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789+- "
                        android:inputType="phone"
                        tools:text="+777777" />
                </com.otus.alexshr.userinfo.ValidatedTextInputLayout>

                <Button
                    android:id="@+id/okBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/ok_btn_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneInput" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.otus.alexshr.userinfo.ValidatedFrameLayout>